--- a/location-details.html
+++ b/location-details.html
@@ -136,7 +136,7 @@
 					<div class="image-block">
 						<img src="assets/images/cars1.png" alt="">
 					</div>
-					<div class="content-block">s
+					<div class="content-block">
 						<h6>Booking method<br><span>Delivery </span></h6>
 						<h6>Pick-up<br><span>26 Sep 2021  |  11:00 PM </span></h6>
 						<h6>Drop-off<br><span>27 Sep 2021  |  11:00 PM </span></h6>
