--- a/reserve-car-selection.html
+++ b/reserve-car-selection.html
@@ -77,7 +77,7 @@
 				<div class="form-head-box">
 					<h6>Pick-up : <span>13 Oct 2021  5PM</span></h6>
 					<h6>Drop-off : <span>13 Oct 2021  5PM</span></h6>
-					<h6>Booking Method : <span>13 Oct 2021  5PM</span></h6>
+					<h6>Booking Method : <span>Reserve</span></h6>
 				</div>
 				<div class="form-box">
 					<div class="row">
@@ -336,7 +336,7 @@
 						<img src="assets/images/cars1.png" alt="">
 					</div>
 					<div class="content-block">
-						<h6>Booking method<br><span>26 Sep 2021  |  11:00 PM </span></h6>
+						<h6>Booking method<br><span>Reserve </span></h6>
 						<h6>Pick-up<br><span>26 Sep 2021  |  11:00 PM </span></h6>
 						<h6>Drop-off<br><span>26 Sep 2021  |  11:00 PM </span></h6>
 					
