--- a/delivery verify booking.html
+++ b/delivery verify booking.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home Page</title>
+	<title>Verify booking</title>
 <link rel="stylesheet" href="assets/owlcarousel/owl.carousel.min.css">
 <link rel="stylesheet" href="assets/css/theme.css">
 <link rel="stylesheet" href="assets/css/layout.css">
@@ -112,6 +112,7 @@
 							<div class="summery-location-block">
 							<h5>Booking Date</h5>
 							<p><span>Pick Up: </span>Oct 12 2021 11pm</p>
+								<p><span>Drop off: </span>Oct 13 2021 11pm</p>
 							</div>
 						</div>
 					
