--- a/delivery-booking-summery.html
+++ b/delivery-booking-summery.html
@@ -74,7 +74,7 @@
 								<div class="col-md-12 col-sm-12 col-12">
 									<div class="summery-location-block location_iconbg">
 										<h5>Customer Location</h5>
-										<p><span>Aldhabab</span><br>Prince Abdulaziz Ibn Jalawi St.</p>
+										<p><span>Prince Fahad Ibn Ibrahim Al Saud St</span><br>Al Malaz</p>
 									</div>
 								</div>
 							
