--- a/personal-detail.html
+++ b/personal-detail.html
@@ -39,7 +39,7 @@
 					<div class="top-menu">
 						<ul>
 							<li><a href="#">about Us</a></li>
-							<li><a href="#">reservation</a></li>
+							<li><a href="#">Booking</a></li>
 							<li><a href="#">our fleet</a></li>
 							<li><a href="#">branches</a></li>
 							<li><a href="#">services</a></li>
@@ -172,7 +172,7 @@
 						<img src="assets/images/cars1.png" alt="">
 					</div>
 					<div class="content-block">
-						<h6>Delivery method<br><span>Reserve </span></h6>
+						<h6>Booking method<br><span>Reserve </span></h6>
 						<h6>Pick-up<br><span>26 Sep 2021  |  11:00 PM </span></h6>
 						<h6>Drop-off<br><span>26 Sep 2021  |  11:00 PM </span></h6>
 					
@@ -207,7 +207,7 @@
 					<div class="footer-menu">
 						<ul>
 							<li><a href="#">Home</a></li>
-							<li><a href="#">Reservation</a></li>
+							<li><a href="#">Booking</a></li>
 							<li><a href="#">our fleets</a></li>
 							<li><a href="#">Branches</a></li>
 							<li><a href="#">promotion</a></li>
