--- a/location-vehicle-delivery.html
+++ b/location-vehicle-delivery.html
@@ -87,7 +87,7 @@
 				
 				
 				<div class="full-block">
-					<h5 class="icon_title"><span>Vehicle Delivey</span></h5>
+					<h5 class="icon_title"><span>Vehicle Delivery</span></h5>
 				</div>
 				<div class="googlemaparea">
 					<div class="row align-items-center">
