--- a/about-us.html
+++ b/about-us.html
@@ -87,7 +87,7 @@
 			</div>
 			<div class="col-lg-6 col-md-8 col-sm-12 col-12">
 				<h4 class="title_red">Services</h4>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis corrupti sint id, ut deserunt molestiae ad nobis maxime. Nulla error minima tenetur voluptas sapiente quod nisi, quibusdam placeat doloribus ab.</p>
+				<p>nlco has always been committed to provide a diverse range of services in order to meet the expectations of its current and potential customers, on both levels businesses and individuals.</p>
 				<div class="full-block">
 				<ul class="circle_listing">
 					<li>CORPORATE CAR RENTAL CONTRACTS</li>
