--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -71,7 +71,8 @@
 
   <div class="accordion-item">
     <div class="item-header">
-      <h4 class="item-question">شروط اإلستخدام</h4>
+      <h4 class="item-question"> شروط الإستخدام 
+</h4>
     </div>
     <div class="item-content">
       <p class="item-answer">نعرض عليكم هذا الموقع اإللكتروني والذي يخضع ألحكام وشروط )"االتفاقية"( ، الرجاء قراءتها وفهمها جيدا قبل البدء في استخدام هذا الموقع.
@@ -99,7 +100,7 @@
   </div>
   <div class="accordion-item">
     <div class="item-header">
-      <h4 class="item-question">العالمات التجارية</h4>
+      <h4 class="item-question"> العلامات التجارية </h4>
     </div>
     <div class="item-content">
       <p class="item-answer">الشركة تملك عالمات الخدمة المسجلة وتشمل ولكنها ليست مقصورة على " نلكو " ، وبعض العالمات واألسماء والشعارات والعالمات التي
@@ -234,7 +235,7 @@
 	
 	  <div class="accordion-item">
     <div class="item-header">
-      <h4 class="item-question">التنازﻻت</h4>
+      <h4 class="item-question">تنازلات</h4>
     </div>
     <div class="item-content">
       <p class="item-answer">
@@ -256,7 +257,7 @@
 	
 	  <div class="accordion-item">
     <div class="item-header">
-      <h4 class="item-question">النزاعا ت</h4>
+      <h4 class="item-question">النزاعات</h4>
     </div>
     <div class="item-content">
       <p class="item-answer">إذا ظهر نزاع حول أي معلومات منشورة على هذا الموقع ، فإن أحكام وشروط هذه االتفاقية والشروط اإلضافية المتغيرة حسب األنظمة المتبعة
@@ -292,7 +293,7 @@
 	
 	  <div class="accordion-item">
     <div class="item-header">
-      <h4 class="item-question">التعوي ض </h4>
+      <h4 class="item-question">التعويض </h4>
     </div>
     <div class="item-content">
       <p class="item-answer">
@@ -308,7 +309,7 @@
 	
 	  <div class="accordion-item">
     <div class="item-header">
-      <h4 class="item-question">إمكانية اتاحة الموق ع</h4>
+      <h4 class="item-question">إمكانية اتاحة الموقع</h4>
     </div>
     <div class="item-content">
       <p class="item-answer">هذا الموقع متاح للوصول خالل 24 ساعة في اليوم ، 7 أيام في األسبوع ، وعلى الرغم من ذلك نحتفظ بالحق في حجب الموقع من وقت آلخر
