--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -75,36 +75,28 @@
               <h4 class="item-question">سياسة الخصوصية</h4>
             </div>
             <div class="item-content">
-              <p class="item-answer">هدف الشركة الوطنية للتأجير )نلكو( الى تقديم ما يفوق التوقعات في مجال المنتجات والخدمات التي نقوم بتقديمها لعمالئنا الكرام وبشكل ثابت.
-                ونكرس كل جهودنا في تقديم تجربة عبر اإلنترنت تلبية إلحتياجاتكم بإستخدام المعلومات التي أوليتمونا ثقتكم في حمايتها والمحافظة عل يها. وتلتزم
-                الشركة باحترام خصو صيتكم وتطبيق كل قوانين ومبادئ حماية البيانات المطبقة في جميع أنحاء العالم. و نقدم لكم بيان سياسة الخصوصية هذا
-                وهو بمثابة توضيح حول البيانات التي نقوم بجمعها ، وكيفية استخدامها ، وكيف أن طريقة استخدامنا لها من شأنها إثراء تجربتكم في استخدامكم
-                لموقعنا اإللكت روني وأثناء عالقتكم معنا ، ونهدف بهذا لمنحكم خلفية كاملة لتستندون عليها في اتخاذ قراركم ، الرجاء منحنا دقائق من وقتكم الثمين
-                لإلطالع على الفقرات أدناه</p>
+              <p class="item-answer">تهدف الشركة الوطنية للتأجير (نلكو) الى تقديم ما يفوق التوقعات في مجال المنتجات والخدمات التي نقوم بتقديمها لعملائنا الكرام وبشكل ثابت. ونكرس كل جهودنا في تقديم تجربة عبر الإنترنت تلبية لإحتياجاتكم بإستخدام المعلومات التي أوليتمونا ثقتكم في حمايتها والمحافظة عليها. وتلتزم الشركة باحترام خصوصيتكم وتطبيق كل قوانين ومبادئ حماية البيانات المطبقة في جميع أنحاء العالم. و نقدم لكم بيان سياسة الخصوصية هذا وهو بمثابة توضيح حول البيانات التي نقوم بجمعها ، وكيفية استخدامها ، وكيف أن طريقة استخدامنا لها من شأنها إثراء تجربتكم في استخدامكم لموقعنا الإلكتروني وأثناء علاقتكم معنا ، ونهدف بهذا لمنحكم خلفية كاملة لتستندون عليها في اتخاذ قراركم ، الرجاء منحنا دقائق من وقتكم الثمين للإطلاع على الفقرات أدناه. </p>
             </div>
           </div>
           <div class="accordion-item">
             <div class="item-header">
-              <h4 class="item-question">أنواع المعلومات التي نقوم بجمعها</h4>
+              <h4 class="item-question">أنواع المعلومات التي نقوم بجمعها </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer">تقوم نلكو بجمع معلومات عن الزائرين للموقع لتقديم ما يلبي احتياجات العمالء ، وتقوم بجمع هذه المعلومات بعلمكم وموافقتكم ، وهذه المعلومات
-                تشمل، االسم، والدولة، وعنوان العمل ، وعنوان البريد اإللكتروني ، وأرقام الهاتف والفاكس ، وأي معلومات أخرى ضرورية إلتمام عملية
-                التوا صل .</p>
+              <p class="item-answer"> تقوم نلكو بجمع معلومات عن الزائرين للموقع لتقديم ما يلبي احتياجات العملاء ، وتقوم بجمع هذه المعلومات بعلمكم وموافقتكم ، وهذه المعلومات تشمل، الاسم، والدولة، وعنوان العمل ، وعنوان البريد الإلكتروني ، وأرقام الهاتف والفاكس ، وأي معلومات أخرى ضرورية لإتمام عملية التواصل. </p>
             </div>
           </div>
           <div class="accordion-item">
             <div class="item-header">
               <h4 class="item-question">أغراض جمع، ومعالجة، وكشف المعلومات <br>
-               الجمع واالستخدام</h4>
+				  الجمع والاستخدام
+                </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer">شركة نلكو ملتزمة بتوضيح كيفية جمع واستخدام معلومات التعريف الشخصية من الزائرين أثناء استخدامهم للموقع، وديدننا في هذا أن ال نقوم
-                بطلب معلومات ما لم نكن في حاجة ماسة لها ، أو استخدامها ، وبعض االستخدامات األولية لمعلومات التعريف الشخصية : </p>
-              <p class="item-answer"> ١ .تقديم خدمة مثل الرد على مقترحاتكم ومعامالتكم . </p>
-              <p class="item-answer"> ٢ .التسويق، والتواصل معكم فيما يتعلق بعروض الخدمات التي تقدمها نلكو ، أو شركاء شركة نلكو ، أو أي طرف ثالث موثوق به . </p>
-              <p class="item-answer"> ولكم الخيار دوما استقبالها منا، على الرغم من أن ً في تقديممعلوماتكم التعريفية الشخصيةمن عدمه أو تحديد نوع االتصاالت التي ترغبون في
-                هذا بدون شك قد يؤثر على تقديم الخدمات والسرعة فيما بيننا . </p>
+              <p class="item-answer"> شركة نلكو ملتزمة بتوضيح كيفية جمع واستخدام معلومات التعريف الشخصية من الزائرين أثناء استخدامهم للموقع، وديدننا في هذا أن لا نقوم بطلب معلومات ما لم نكن في حاجة ماسة لها ، أو استخدامها ، وبعض الاستخدامات الأولية لمعلومات التعريف الشخصية : </p>
+              <p class="item-answer"> ١. تقديم خدمة مثل الرد على مقترحاتكم ومعاملاتكم. </p>
+              <p class="item-answer"> ٢. التسويق، والتواصل معكم فيما يتعلق بعروض الخدمات التي تقدمها نلكو ، أو شركاء شركة نلكو ، أو أي طرف ثالث موثوق به. </p>
+              <p class="item-answer"> ولكم الخيار دوماً في تقديم معلوماتكم التعريفية الشخصية من عدمه أو تحديد نوع الاتصالات التي ترغبون في استقبالها منا، على الرغم من أن هذا بدون شك قد يؤثر على تقديم الخدمات والسرعة فيما بيننا. </p>
             </div>
           </div>
           <div class="accordion-item">
@@ -112,62 +104,49 @@
               <h4 class="item-question">معالجة وكشف المعلومات</h4>
             </div>
             <div class="item-content">
-              <p class="item-answer"> في أغلب الحاالت تتم إضافة المعلومات المقدمة من جانبكم إلى قاعدة معلومات محلية أو عالمية ، وفي إطار معالجة معلوماتكم قد يكون من
-                الضروري تحويله ا إلى منسوبي شركة نلكو و/أو مزودي خدمة آخرون في المملكة العربية السعودية أو في أي مكان في العالم وذلك بغرض
-                وضع الخطوط العريضة لسياسة الخصوصية المستخدمة في هذا البيان. وفي مجمل التجربة فأن الشركة ال تقوم بييع، أو ايجار ، أو منح تملك </p>
-              <p class="item-answer"> ١ .في حالة استالم موافقتكم على كشف المعلوما ت. </p>
-              <p class="item-answer"> ٢.  ﻓﻲ اﻟﺣﺎﻻت اﻟﺗﻲ ﯾﻛون ﻓﯾﮭﺎ ﻛﺷف  اﻟﻣﻌﻠوﻣﺎت ﺿرورﯾﺎً ﻟﻠﺟﮭﺎت اﻟرﺳﻣﯾﺔ او ﺷرﻛﺎت اﻟﺗﺄﻣﯾن </p>
-              <p class="item-answer"> ٣.  ﻋﻧدﻣﺎ ﺗﻛون ھذه اﻟﻣﻌﻠوﻣﺎت ﻣطﻠوﺑﺔ ﻣن ﻗﺑل اﻟﺷرﻛﺎت اﻟﺗﻲ ﺗﻘوم ﺑﺗﻘدﯾم اﻟﺧدﻣﺎت ﺑﺎﻟﻧﯾﺎﺑﺔ ﻋن ﺷرﻛﺔ  ﻧﻠﻛو   ) ﻣﺛل ﺧدﻣﺎت دﻋم اﻟﻌﻣﯾل   ، أو   إدارة ﺑﺣوث اﻟﺗﺳوﯾﻖ   ، أو إدارة ﻗﺎﻋدة اﻟﺑﯾﺎﻧﺎت ( </p>
-              <p class="item-answer"> ٤.  ﻋﻧدﻣﺎ ﯾﻛون اﻟوﺻول إﻟﻰ اﻟﻣﻌﻠوﻣ ﺎت ﺿروري ﻟﺗﺳﮭﯾل اﻟﻌﻣﻠﯾﺎت اﻟﺗﺟﺎرﯾﺔ أو اﻟوﻓﺎء  ﺑﺎﻻﻟﺗزاﻣﺎت   اﻟﺗﻌﺎﻗدﯾﺔ </p>
-              <p class="item-answer"> ٥.  ﻟﻠﺗﻘﯾد واﻻﻟﺗزام ﺑﺎﻟﻣﺗطﻠﺑﺎت اﻟﻘﺎﻧوﻧﯾﺔ واﻟﻧظﺎﻣﯾﺔ ﻟﻘﺎﻧون ﺳﺎﺋد أو اﻣر ﻣﺣﻛﻣﺔ </p>
-              <p class="item-answer"> ٦.  ﻓﻲ ﺣﺎﻟﺔ اﻟطواري ﻣﺛل ﺣﻣﺎﯾﺔ، ﺣﯾﺎ ة  ، او ﺻﺣﺔ   ، أو ﻣﻣﺗﻠﻛﺎت ﻓر د </p>
+              <p class="item-answer"> في أغلب الحالات تتم إضافة المعلومات المقدمة من جانبكم إلى قاعدة معلومات محلية أو عالمية ، وفي إطار معالجة معلوماتكم قد يكون من الضروري تحويلها إلى منسوبي شركة نلكو و/أو مزودي خدمة آخرون في المملكة العربية السعودية أو في أي مكان في العالم وذلك بغرض وضع الخطوط العريضة لسياسة الخصوصية المستخدمة في هذا البيان. وفي مجمل التجربة فأن الشركة لا تقوم بييع، أو ايجار ، أو منح تملك مادي لمعلومات التعريف الشخصية الخاصة بكم لأي أطراف أخرى خارج منظومة الشركة الوطنية للتأجير ، والحالات التي تقوم فيها الشركة بالكشف عن المعلومات للآخرين تشمل: </p>
+              <p class="item-answer"> ١. في حالة استلام موافقتكم على كشف المعلومات. </p>
+              <p class="item-answer"> ٢. في الحالات التي يكون فيها كشف المعلومات ضرورياً للجهات الرسمية او شركات التأمين. </p>
+              <p class="item-answer"> ٣. عندما تكون هذه المعلومات مطلوبة من قبل الشركات التي تقوم بتقديم الخدمات بالنيابة عن شركة نلكو ( مثل خدمات دعم العميل ، أو إدارة بحوث التسويق ، أو إدارة قاعدة البيانات). </p>
+              <p class="item-answer"> ٤. عندما يكون الوصول إلى المعلومات ضروري لتسهيل العمليات التجارية أو الوفاء بالالتزامات التعاقدية. </p>
+              <p class="item-answer"> ٥. للتقيد والالتزام بالمتطلبات القانونية والنظامية لقانون سائد أو امر محكمة. </p>
+              <p class="item-answer"> ٦. في حالة الطواري مثل حماية، حياة ، او صحة ، أو ممتلكات فرد.</p>
             </div>
           </div>
           <div class="accordion-item">
             <div class="item-header">
-              <h4 class="item-question">الموافقة</h4>
+              <h4 class="item-question"> الموافقة </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer">كجزء من إلتزامنا بالشفافية معكم ، قد نقوم باالتصال بكم عبر البريد العادي ، أو البريد اإللكتروني ، أو الهاتف أو أي وسيلة اتصال أخرى
-                إلطالعكم على جديد منتجات شركة نلكو ، وخدماتها ، أو باي عروض خاصة جديدة ، أو أحداث ، او أي معلومات أخرى قد تكون من
-                مصلحتكم. وقد تتلقون رسائل ب ريدية من أطراف أخرى مختارين بعناية ، ونمنحكم الحق في رفض أي من أو كل تلك المراسالت وذلك بإتباع
-                التوجيهات في رسائلنا البريدية أو باالتصال مباشرة ب نلكو.</p>
-              <p class="item-answer">ونود أن نبقي كل العمالء الكرام على اطالع لتكون الفرصة متساوية لإلستفادة من عروض شركة نلكو وشركائها . </p>
+              <p class="item-answer"> كجزء من إلتزامنا بالشفافية معكم ، قد نقوم بالاتصال بكم عبر البريد العادي ، أو البريد الإلكتروني ، أو الهاتف أو أي وسيلة اتصال أخرى لإطلاعكم على جديد منتجات شركة نلكو ، وخدماتها ، أو باي عروض خاصة جديدة ، أو أحداث ، او أي معلومات أخرى قد تكون من مصلحتكم. وقد تتلقون رسائل بريدية من أطراف أخرى مختارين بعناية ، ونمنحكم الحق في رفض أي من أو كل تلك المراسلات وذلك بإتباع التوجيهات في رسائلنا البريدية أو بالاتصال مباشرة بنلكو. </p>
+              <p class="item-answer"> ونود أن نبقي كل العملاء الكرام على اطلاع لتكون الفرصة متساوية للإستفادة من عروض شركة نلكو وشركائها. </p>
             </div>
           </div>
           <div class="accordion-item">
             <div class="item-header">
-              <h4 class="item-question">الوصول لمعلومات التعريف الشخصية </h4>
+              <h4 class="item-question"> الوصول لمعلومات التعريف الشخصية </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer">ولضمان أن تكون معلومات التعريف الشخصية محمية ومحدثة ، نحثكم على مراجعتها وتحديثها بإنتظام )مث ًال في حالة تغيير العنوان ، أو البريد
-                اإللكتروني أو رغبتم في إضافة وسيلة اتصال أخرى في التواصل معكم(. إذا سجلتم تحت بوابة استخدامنا يمكنكم المراجعة والتعديل عبر
-                اإلنترنت مباشرة. قد تطالبون بإثبات هويتكم )أو أي مواد مصادقة أخرى( مع نموذج طلب الوصول الكامل. وال يمكن الوصول لمعلومات
-                التعريف الشخصية عبر الهاتف .</p>
-              <p class="item-answer"> ﺣﺎﻟﺔ طﻠﺑﻛم ﺑﺈزاﻟﺔ ﺑﻌض اﻟﻣﻌﻠوﻣﺎت ﺳﯾﺗم اﻻﺣﺗﻔﺎظ ﺑﮭذه اﻟﻣﻌﻠوﻣﺎت ﻓﻲ ﻣﻠﻔﺎت ﻣﻌﯾ ﻧﺔ ﻟﻔﺗرة ﻣن اﻟزﻣن ﺣﺗﻰ ﺣل اﻟﻧزاﻋﺎت وﺗﺻوﯾب اﻟﺧطﺄ  إﻻ أن ﺑﻌض أﻧواع اﻟﻣﻌﻠوﻣﺎت ﺳﯾﺗم ﺗﺧزﯾﻧﮭﺎ ﻟﻔﺗرة ﻏﯾر ﻣﺣددة ﻓﻲ أﻧظﻣﺔ "اﻟﺣﻔظ" أو ﻣﻠﻔﺎت اﻟدﺧول ﻧﺳﺑﺔ ﻟﻠﻣﺷﺎﻛل اﻟﺗﻘﻧﯾﺔ   ، أو اﻟﻣﺎدﯾﺔ   ، أو   اﻟﻣﺗطﻠﺑﺎت اﻟﻘﺎﻧوﻧﯾﺔ   ، ﻟذا ﻻ ﺗﺗوﻗﻌوا ﻣﻧﺎ داﺋﻣﺎً أن ﻧﻘوم ﺑﺈزاﻟﺔ   ﻣﻌﻠوﻣﺎت اﻟﺗﻌرﯾف اﻟﺷﺧﺻﯾﺔ ﻣن  ﻗﺎﻋدة اﻟﺑﯾﺎﻧ ﺎت   اﺳﺗﺟﺎﺑﺔ ﻟطﻠﺑﻛ م </p>
+              <p class="item-answer">ولضمان أن تكون معلومات التعريف الشخصية محمية ومحدثة ، نحثكم على مراجعتها وتحديثها بإنتظام (مثلاً في حالة تغيير العنوان ، أو البريد الإلكتروني أو رغبتم في إضافة وسيلة اتصال أخرى في التواصل معكم). إذا سجلتم تحت بوابة استخدامنا يمكنكم المراجعة والتعديل عبر الإنترنت مباشرة. قد تطالبون بإثبات هويتكم (أو أي مواد مصادقة أخرى) مع نموذج طلب الوصول الكامل. ولا يمكن الوصول لمعلومات التعريف الشخصية عبر الهاتف.
+وفي حالة طلبكم بإزالة بعض المعلومات سيتم الاحتفاظ بهذه المعلومات في ملفات معينة لفترة من الزمن حتى حل النزاعات وتصويب الخطأ ، إلا أن بعض أنواع المعلومات سيتم تخزينها لفترة غير محددة في أنظمة "الحفظ" أو ملفات الدخول نسبة للمشاكل التقنية ، أو المادية ، أو المتطلبات القانونية ، لذا لا تتوقعوا منا دائماً أن نقوم بإزالة معلومات التعريف الشخصية من قاعدة البيانات استجابة لطلبكم.
+  </p>
+              
             </div>
           </div>
           <div class="accordion-item">
             <div class="item-header">
-              <h4 class="item-question"> اﻟﺗﻘﻧﯾﺎت اﻟﻣﺑﺎﺷرة ﻋﺑر اﻹﻧﺗرﻧت </h4>
+              <h4 class="item-question"> التقنيات المباشرة عبر الإنترنت </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer"> قد تقوم شركة نلكو بإستخدام سجالت تتبع ، ونقاط شاشة )وحدات بيكسل( غير مرئية ، وفنارات دالة للحصول على معلومات عنكم أثناء
-                زيارتكم للموقع. وسجل التتبع هو ملف نصي صغير ير سل لمتصفحكم من السيرفر ويتم تخزينه في محرك األقراص الصلبة في جهاز ال حاسب
-                اآللي ، ويعطي الكمبيوتر ميزة فريدة في انه سيكون بطاقة تعريف في حالة الرجوع للموقع اإللكتروني .
-                وسجالت التتبع مصممة بحيث توفر وقتكم ألنها تمدكم بالتجربة المخصصة بدون تذكيرنا بأولياتكم في مرة في رجوعكم لصفحاتنا على
-                اإلنترنت ، وسجالت تتبع الشركة الوطنية للتأجير غير مصممة على الحاق الضرر على ملفاتكم أو قراءة ملفات أخرى موجودة في محرك
-                األقراص الصلبة في ال حاسب اآللي . </p>
-              <p class="item-answer"> وسجالت التتبع تمكننا ايضا نت بالطرق اآلتي ة: ً في مدكم بتجربة شخصيةمباشرة عبر اإلنتر </p>
-              <p class="item-answer"> ١ .تقوم بحفظ اسم المستخدم وكلمة المرور للدخول مستقب ًال بيسر وسهولة. </p>
-              <p class="item-answer"> ٢ .تؤكد وصول اإلطارات والمحتوى المناسب لك م. </p>
-              <p class="item-answer">٣ .تؤكد أنكم قمتم بالحصول على المعلومات المطلوبة . </p>
-              <p class="item-answer"> ٤ .تساعدنا في تسليم المراسالت المتعلقة بمصالحكم وموقعكم . </p>
-              <p class="item-answer"> سجالت تتبع شركة نلكو محدودة بإستخدامكم هذا الموقع وغير مصممة لتعقبكم في تصفحكم لمواقع اإلنترنت األخرى بعد تسجيل الخروج من
-                هذا الموقع. ونحن نتعقب استخدام موقعنا من تلبية احتياجاتكم وتسهيل عملية العثور على المعلومات في المستقبل. والرجاء مالحظة األطر اف
-                قد تضع سجالت تتبع أيضا ، وعليه شركة نلكو غير مسئولة عن ظهور أو غياب سجالت تتبع ألي ً األخرى في محرك االقراصالصلبة لديكم
-                طرف ثالث ، أو عن أي امكانيات تقنية أو ممارسات تتعلق بسجالت أطراف أخرى . </p>
-              <p class="item-answer"> </p>
+              <p class="item-answer"> قد تقوم شركة نلكو بإستخدام سجلات تتبع ، ونقاط شاشة (وحدات بيكسل) غير مرئية ، وفنارات دالة للحصول على معلومات عنكم أثناء زيارتكم للموقع. وسجل التتبع هو ملف نصي صغير يرسل لمتصفحكم من السيرفر ويتم تخزينه في محرك الأقراص الصلبة في جهاز الحاسب الآلي، ويعطي الكمبيوتر ميزة فريدة في انه سيكون بطاقة تعريف في حالة الرجوع للموقع الإلكتروني. </p>
+              <p class="item-answer"> وسجلات التتبع مصممة بحيث توفر وقتكم لأنها تمدكم بالتجربة المخصصة بدون تذكيرنا بأولياتكم في مرة في رجوعكم لصفحاتنا على الإنترنت ، وسجلات تتبع الشركة الوطنية للتأجير غير مصممة على الحاق الضرر على ملفاتكم أو قراءة ملفات أخرى موجودة في محرك الأقراص الصلبة في الحاسب الآلي.</p>
+              <p class="item-answer"> وسجلات التتبع تمكننا ايضاً في مدكم بتجربة شخصية مباشرة عبر الإنترنت بالطرق الآتية: </p>
+              <p class="item-answer"> ١. تقوم بحفظ اسم المستخدم وكلمة المرور للدخول مستقبلاً بيسر وسهولة. </p>
+              <p class="item-answer"> ٢. تؤكد وصول الإطارات والمحتوى المناسب لكم. </p>
+              <p class="item-answer"> ٣. تؤكد أنكم قمتم بالحصول على المعلومات المطلوبة. </p>
+              <p class="item-answer"> ٤. تساعدنا في تسليم المراسلات المتعلقة بمصالحكم وموقعكم. </p>
+              <p class="item-answer"> سجلات تتبع شركة نلكو محدودة بإستخدامكم هذا الموقع وغير مصممة لتعقبكم في تصفحكم لمواقع الإنترنت الأخرى بعد تسجيل الخروج من هذا الموقع. ونحن نتعقب استخدام موقعنا من تلبية احتياجاتكم وتسهيل عملية العثور على المعلومات في المستقبل. والرجاء ملاحظة الأطراف الأخرى قد تضع سجلات تتبع أيضاً في محرك الاقراص الصلبة لديكم ، وعليه شركة نلكو غير مسئولة عن ظهور أو غياب سجلات تتبع لأي طرف ثالث ، أو عن أي امكانيات تقنية أو ممارسات تتعلق بسجلات أطراف أخرى. </p>
+              <p class="item-answer">وتستخدم الشركة أيضاً نقاط شاشة (وحدات بيكسل) غير مرئية ، و تعرف أحياناً بالفنارات الدالة ، وذلك لمعرفة عدد الأشخاص الذين قاموا بزيارة صفحات. تستخدم هذه المعلومات كتقارير ولا تحتوى على أي معلومات تعريف شخصية وتستخدم نلكو هذه المعلومات لتطوير برامج التسويق ومحتوى الموقع. </p>
             </div>
           </div>
           <div class="accordion-item">
@@ -175,12 +154,8 @@
               <h4 class="item-question"> وضع الروابط لمواقع أخرى </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer"> تقوم شركة نلكو بوضع روابط لمواقع اخرى وذلك لراحتكم وسهولة حصولكم على المعلومات ، وعليه فإن الشركة غير مسئولة وال تتحمل
-                مسئولية ما تعرضه أو تحتويه أي مواقع أ خري مستقلة ، وتشمل تلك المحتويات ولكنها ليست مقصورة على أي دعاوى إعالن أو ممارسات
-                تسويقية . </p>
-              <p class="item-answer"> والمواقع األخرى ألي طرف ثالث يتم الوصول إليها عبر موقعنا لديها سياسة خصوصية ، ووسائل جمع ، وتدابير حماية منفصلة. وعليه فإن
-                نلكو غير مسئولة وال تتحمل مسئولية أي ممارسات ، وسياسات ، وتدابير أمنية تطبقها األطراف األخرى على مواقعهم وأنتم مطالب ون بمراجعة
-                بيانات الخصوصية والسياسات للمواقع المتصلة لمعرفة الكيفية التي تقوم بها تلك المواقع في جمع واستخدام وتخزين المعلومات . </p>
+              <p class="item-answer"> تقوم شركة نلكو بوضع روابط لمواقع اخرى وذلك لراحتكم وسهولة حصولكم على المعلومات ، وعليه فإن الشركة غير مسئولة ولا تتحمل مسئولية ما تعرضه أو تحتويه أي مواقع أخري مستقلة ، وتشمل تلك المحتويات ولكنها ليست مقصورة على أي دعاوى إعلان أو ممارسات تسويقية. </p>
+              <p class="item-answer"> والمواقع الأخرى لأي طرف ثالث يتم الوصول إليها عبر موقعنا لديها سياسة خصوصية ، ووسائل جمع ، وتدابير حماية منفصلة. وعليه فإن نلكو غير مسئولة ولا تتحمل مسئولية أي ممارسات ، وسياسات ، وتدابير أمنية تطبقها الأطراف الأخرى على مواقعهم وأنتم مطالبون بمراجعة بيانات الخصوصية والسياسات للمواقع المتصلة لمعرفة الكيفية التي تقوم بها تلك المواقع في جمع واستخدام وتخزين المعلومات.</p>
             </div>
           </div>
           <div class="accordion-item">
@@ -188,9 +163,7 @@
               <h4 class="item-question"> المستخدمين القاصرين </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer"> ﻻ  ترغ ب شركة نلكو أو تبحث في استالم معلومات تعريف شخصية من األشخاص القاصرين مباشرة ، وال تستطيع على تحديد أعمار
-                االشخاص الذين يقومون بالدخول واستخدام الموقع ، فإذا مدنا القاصر )كما يعرفه القانون الساري( ببياناته/ بياناتها بدون موافقة وال ديه أو الوصي
-                ، نحن نشجع الوالدين أو الوصي على االتصال بنا إلزالة وعدم إدراج القاصرين في اتصاالت نلكو التسويقية . </p>
+              <p class="item-answer"> لا ترغب شركة نلكو أو تبحث في استلام معلومات تعريف شخصية من الأشخاص القاصرين مباشرة ، ولا تستطيع على تحديد أعمار الاشخاص الذين يقومون بالدخول واستخدام الموقع ، فإذا مدنا القاصر (كما يعرفه القانون الساري) ببياناته/ بياناتها بدون موافقة والديه أو الوصي ، نحن نشجع الوالدين أو الوصي على الاتصال بنا لإزالة وعدم إدراج القاصرين في اتصالات نلكو التسويقية. </p>
             </div>
           </div>
           <div class="accordion-item">
@@ -198,9 +171,7 @@
               <h4 class="item-question"> الدقة والخصوصية </h4>
             </div>
             <div class="item-content">
-              <p class="item-answer"> مع بذل المحاوالت في سبيل جعل كل المعلومات المقدمة في هذا الموقع من حيث دقتها وفائدتها، ال تضمن شركة نلكو محتوى أو دقة المواد التي
-                يمكن الوصول إليها عبر هذا الموقع أو السيرفر المستضيف. ومن أجل الحفاظ على هوية وخصوصية موظفينا واألسماء المستعارة والمجازية
-                الم ستخدمة في هذا الموقع . وعليه ال نتحمل أي مسئولية دقة البيانات ، أو المعلومات المقدمة ، أو مسئولية عواقبها . </p>
+              <p class="item-answer"> مع بذل المحاولات في سبيل جعل كل المعلومات المقدمة في هذا الموقع من حيث دقتها وفائدتها، لا تضمن شركة نلكو محتوى أو دقة المواد التي يمكن الوصول إليها عبر هذا الموقع أو السيرفر المستضيف. ومن أجل الحفاظ على هوية وخصوصية موظفينا والأسماء المستعارة والمجازية المستخدمة في هذا الموقع . وعليه لا نتحمل أي مسئولية دقة البيانات ، أو المعلومات المقدمة ، أو مسئولية عواقبها </p>
             </div>
           </div>
         </div>
