--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -69,7 +69,7 @@
         <h4 class="title_red">Privacy Policy</h4>
         
         <!--1--->
-        <div class="accordion-content">
+        <div class="accordion-content" dir="rtl">
           <div class="accordion-item">
             <div class="item-header">
               <h4 class="item-question">سياسة الخصوصية</h4>
