--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -66,7 +66,7 @@
 				<h4 class="title_red">Terms of Use</h4>
 
 <!--1--->
-<div class="accordion-content">
+<div class="accordion-content" dir="rtl">
 
 
   <div class="accordion-item">
