--- a/location-vehicle-delivery - new.html
+++ b/location-vehicle-delivery - new.html
@@ -105,7 +105,7 @@
 						<textarea name="" id="" placeholder="Address information"></textarea>
 				</div><!-- /.address location -->
 				<div class="full-block summery-tickbox2" style="margin: 0 0 20px 0px">
-					<input type="checkbox"><span style="color: #ce132e;"> For more delivery option </span>
+					<input type="checkbox"><span style="color: #ce132e;"> <strong>For more delivery options</strong> </span>
 				</div>
 				
 
@@ -154,6 +154,14 @@
 					</div>
 				</div>
 
+			<div class="full-block">
+						<div class="row">
+							<div class="col-md-4 col-sm-4 col-4"><a href="" class="button backbutton"><img src="assets/images/back-icon-color.svg" alt=""><span>Back</span></a></div>
+							<div class="col-md-8 col-sm-8 col-8"><a href="" class="button proceedtopay"><img src="assets/images/security-badge.svg" alt=""><span>Proceed to pay</span></a></div>
+						</div>	
+					</div>
+			
+			
 
 <div class="popUpContent locationChoose-block">
 		<div class="popContainer">
