--- a/location-vehicle-delivery - new.html
+++ b/location-vehicle-delivery - new.html
@@ -123,8 +123,12 @@
 							</div>
 							<div class="radio_option-container">
 								<div class="option_block"><input type="radio" name="pickuplocation"><span>Deliver to my location</span></div>
+								<a href="#" class="clickdifferentlocation">Click here if the location is different</a>
 								<div class="option_block"><input type="radio" name="pickuplocation"><span>Pick up from the branch</span></div>
-							</span>
+								<div class="option_block">
+											<select name="" id=""><option value="">Option One</option></select>
+									</div>
+							
 						</div>
 					</div>
 						<div class="col-md-6 col-sm-6 col-12">
