--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-6 col-12">
 							<h6>Doorstep delivery service</h6>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+							<p>Your solution is just a few clicks away.</p>
 						</div>
 						<div class="col-lg-4 col-md-12 col-sm-12 col-12">
 							<div class="round-iconbox">
