--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
 							<div class="content_box">
 								<h4 class="title_red">Corporate Car Rental Contracts</h4>
 								<p>Close a deal with NLCO for your corporate projects. Be assured of a quality brand while on your business project, and close a long-term rental agreement with NLCO, getting exclusive cars for a set period of time at a fixed monthly price. You will save money, and avoid unexpected costs.</p>
-								<a href="#" class="button">Get quote</a>
+								<a href="#" class="button">Our fleet</a>
 
 							</div>
 						</div>
@@ -85,7 +85,7 @@
 							<div class="content_box">
 								<h4 class="title_red">Replacement Car Service</h4>
 								<p>NLCO now offers car replacement. Once you sign up with our Car Replacement Service, we will offer you a cover in case you got in an accident, or were the victim of car theft. So be assured in your car trips, and insure yourself with NLCO Car Replacement Service.</p>
-								<a href="#" class="button">Get quote</a>
+								<a href="#" class="button">Our fleet</a>
 
 							</div>
 						</div>
@@ -98,7 +98,7 @@
 							<div class="content_box">
 								<h4 class="title_red">Delivery option</h4>
 								<p>Get special deals with our Loyalty program. You can earn points with each rental, and once your points gather up, you can receive special offers and deals from our loyalty services. In this way you can save money and get benefits with every penny you spend.</p>
-								<a href="#" class="button">Get quote</a>
+								<a href="#" class="button">Our fleet</a>
 
 							</div>
 						</div>
@@ -111,7 +111,7 @@
 							<div class="content_box">
 								<h4 class="title_red">Long term rental</h4>
 								<p>NLCO accepts the following credit card payment methods: Visa or MasterCard. This way you can be ensured of your payment security and be in control of your accounts, check your transactions and get periodic reportings from your banking service.</p>
-								<a href="#" class="button">Get quote</a>
+								<a href="#" class="button">Our fleet</a>
 
 							</div>
 						</div>
