--- a/reserve-car-selection.html
+++ b/reserve-car-selection.html
@@ -144,7 +144,7 @@
 					<div class="row align-items-center">
 						<div class="col-md-5 col-sm-8 col-12">
 							<h2>register now</h2>
-							<h5>To get Discounts  & Pay Online to get <br>Online Payment Discount</h5>
+							<h5>To get Discounts  & Pay Online</h5>
 						</div>
 						<div class="col-md-3 col-sm-4 col-12"><a href="#" class="button" style="border-radius:20px;">Sign In</a></div>
 						<div class="col-md-4 col-sm-12 col-12"><div class="register-image"><img src="assets/images/signin-cars.png" alt=""></div></div>
@@ -162,7 +162,7 @@
 				<div class="full-block">
 					<div class="row row-eq-height">
 						<div class="col-lg-4 col-md-6 col-sm-6 col-12 mb-30p">
-							<div class="car-block">
+							<div class="car-block redborder_car-block">
 								<div class="image">
 									<img src="assets/images/cars1.png" alt="">
 								
@@ -193,7 +193,7 @@
 							<div class="car-block">
 								<div class="image">
 									<img src="assets/images/cars1.png" alt="">
-									<div class="badge"><img src="assets/images/badge-offer.png" alt="offer badge"/></div>
+									
 								</div>
 								<div class="carname">
 									<h6>Small Sedan</h6>
