--- a/reserve verify booking.html
+++ b/reserve verify booking.html
@@ -55,7 +55,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12"><h6>booking Details<span class="borderline"></span></h6></div>
-			<div class="col-12"><h4>Book Your Ride</h4></div>
+			<div class="col-12"><h4>Verify  Your Ride</h4></div>
 		</div>
 	</div>
 </div>
@@ -87,7 +87,7 @@
 			<div class="col-md-5 col-sm-4 col-12">
 				<div class="summery-edit-block">
 					<div class="image-block">
-						<a href="#">Edit</a>
+						
 						<img src="assets/images/car1.jpg" alt="">
 					</div>
 					<h4>Chevrolet Spark 2020<h4><h6>Or Similar</h6>
