--- a/reserve booking-summery.html
+++ b/reserve booking-summery.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Booking Summery</title>
 <link rel="stylesheet" href="assets/owlcarousel/owl.carousel.min.css">
-<link rel="stylesheet" href="assets/css/theme.css">
-<link rel="stylesheet" href="assets/css/layout.css">
+<link rel="stylesheet" href="assets/css/theme.css?v=0.1">
+<link rel="stylesheet" href="assets/css/layout.css?v=0.1">
 <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
 </head>
 <body>
@@ -60,49 +60,83 @@
 			<div class="col-12">
 				<div class="booking_summery_block">
 					<div class="row">
-						<div class="col-12"><h1><span>BOOKING summary</span></h1><h6>Booking Ref: nl-j01656266</h6></div>
-						<div class="col-md-4 col-sm-12 col-12">
-							<div class="summery-edit-block">
-								<div class="image-block">
-									<img src="assets/images/car1.jpg" alt="">
-								</div>
-								<h4>Chevrolet Spark 2020<h4><h6>Or Similar</h6>
+						<div class="col-12"><h1><span>BOOKING summary</span></h1></div>
+					</div>
+
+
+					<div class="row align-self-stretch">
+						<div class="col-md-7 col-sm-12 col-12">
+							<div class="booking_reserve_confirm_message first_message_box">
+								<div class="tick_iconred"><img src="assets/images/icon_tick_red.svg" alt=""></div>
+								<h2>Congratulations! Your reservation Confirmed</h2>
+								<a href="#" class="button">Reservation Number: <strong>DLR8537</strong></a>
+								<h6><span>Payment method:</span> Pay by a credit card</h6>
 							</div>
 						</div>
-						<div class="col-md-8 col-sm-12 col-12">
-							<div class="row">
-								<div class="col-md-6 col-sm-6 col-12">
-									<div class="summery-location-block location_iconbg">
-										<h5>Pick-up Location</h5>
-										<p><span>Aldhabab</span><br>Prince Abdulaziz Ibn Jalawi St.</p>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 col-12">
-									<div class="summery-location-block location_iconbg">
-										<h5>Drop-off Location</h5>
-										<p><span>Aldhabab</span><br>Prince Abdulaziz Ibn Jalawi St.</p>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 col-12">
-									<div class="summery-location-block">
-										
-										<div class="row no-gutters">
-											<div class="col-12"><h5>Booking Date</h5></div>
-											<div class="col-6"><p><span>Pick Up: </span><br>Oct 12 2021 11pm</p></div>
-											<div class="col-6"><p><span>Drop-off: </span><br>Oct 13 2021 11pm</p></div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 col-12">
-									<div class="summery-location-block">
-										<h5>Booking Method</h5>
-										<p>Reserve</p>
-									</div>
-								</div>
-								
+						<div class="col-md-5 col-sm-12 col-12">
+							<div class="booking_reserve_confirm_message">
+								<h3>For support related to upcoming rentals.</h3>
+								<ul>
+									<li><a href="#"><img src="assets/images/icon_red_email.svg" alt="">service@nlco.sa</a></li>
+									<li><a href="#"><img src="assets/images/icon_red_phone.svg" alt="">+966 11234567</a></li>
+									<li><a href="#"><img src="assets/images/icon_red_telephone.svg" alt="">(Toll Free) 808 808 808</a></li>
+								</ul>
+								<a href="#" class="button"><strong>Start Another Reservation</strong></a>
 							</div>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-12">
+							<div class="booking_block_container">
+								<div class="row">
+									<div class="col-lg-4 col-md-12 col-sm-12 col-12">
+										<div class="booking_car">
+											<h3>Hunday Accent</h3><h6>Or Similar | Economy</h6>
+											<img src="assets/images/cars1.png" alt="">
+										</div>
+									</div>
+									<div class="col-lg-3 col-md-6 col-sm-12 col-12">
+										<div class="booking_feature">
+											<h4>Features</h4>
+											<ul>
+												<li><img src="assets/images/icon-feature-user2.svg" alt=""><span>4 Person Seats</span></li>
+												<li><img src="assets/images/icon-feature-door2.svg" alt=""><span>4 Doors</span></li>
+												<li><img src="assets/images/icon-feature-service2.svg" alt=""><span>Automatic</span></li>
+												<li><img src="assets/images/icon-feature-case2.svg" alt=""><span>1 Luggage Space</span></li>
+												<li><img src="assets/images/icon-feature-ac2.svg" alt=""><span>AC</span></li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-lg-5 col-md-6 col-sm-12 col-12">
+										<div class="returnlocation">
+											<h5>Return Location</h5>
+											<h6><strong>Salah Ad Din Al Ayyubi Rd, Al Malaz</strong></h6>
+											<p>10 Apr 2022, 1:30 AM</p>
+										</div>
+										<div class="returnlocation">
+											<h5>Return Location</h5>
+											<h6><strong>Salah Ad Din Al Ayyubi Rd, Al Malaz</strong></h6>
+											<p>10 Apr 2022, 1:30 AM</p>
+										</div>
+									</div>
+									<div class="col-12"><a href="#" class="button">Cancel reservation </a>
+										<a href="#" class="button">Modify reservation</a></div>
+								</div>
+							</div><!-- /. booking block container -->
+						</div>
+					</div>
+					<!-- /.booked vehicle details -->
+
+
+
+
+
+
+
+
+
+
+
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12 col-12"><h5 class="summerhead">Price Details</h5></div>
 						<div class="col-md-10 col-sm-12 col-12">
