--- a/reserve booking-summery.html
+++ b/reserve booking-summery.html
@@ -109,7 +109,7 @@
 									</div>
 									<div class="col-lg-5 col-md-6 col-sm-12 col-12">
 										<div class="returnlocation">
-											<h5>Return Location</h5>
+											<h5>Pick up Location</h5>
 											<h6><strong>Salah Ad Din Al Ayyubi Rd, Al Malaz</strong></h6>
 											<p>10 Apr 2022, 1:30 AM</p>
 										</div>
